# yquake2-appimage

./: CMakeLists.txt  Makefile  README.md  build-ogl.sh  build-sdl.sh  build.sh
.github/workflows/: cibuild.yml
AppDir/usr/share/applications/: org.yamagi.YamagiQ2.desktop
Sources/: appimage.c  appimage.h  main.c
patches/: 0001-yquake2-AppImage.patch  0002-zaero-AppImage.patch  0003-yquake2-AppImage.patch
